--- a/src/ilovu.html
+++ b/src/ilovu.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8"/>
     <link rel="icon" href="../assets/icon.png" />
-    <title>Noa Smoter</title>
+    <title>Pour toi manooon</title>
     <script src="./script.js" defer></script>
     <link rel="stylesheet" href="./style.css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
