--- a/src/ilovu.html
+++ b/src/ilovu.html
@@ -14,10 +14,10 @@
 			<a href="../index.html"><img src="../assets/icon.png" class="icon" alt="icon logo nerzouille webpage"></a>
 			<nav>
 				<ul id="menu">
-					<li><a href="">SOME TXT</a></li>
-					<li><a href="">Mon CV</a></li>
-					<li><a href="">SOME TXT</a></li>
-					<li><a href="">SOME TXT</a></li>
+					<li><a href="">Je</a></li>
+					<li><a href="">T'aime</a></li>
+					<li><a href="">Ptit</a></li>
+					<li><a href="">Coeeeeeur</a></li>
 				</ul>
 			</nav>
 			<img src="../assets/menu.png" class="menu" id="icon-menu" onclick="toggle()">
