[FIX] - real release 👀 👀

--- a/src/ilovu.html
+++ b/src/ilovu.html
@@ -36,7 +36,8 @@
 				<br><br>J'espère que tu vas trouver quelque chose pour te faire excuser de ces frayeurs 👀
 				<br><br>Je t'aime vraiment très fort manon,
 				<br>J'ai hâte de te voir, et de vivre de nouveaux jours à tes côtés afin de remplir un peu plus ce petit mot.
-				<br> Je t'aime fooooooort ❤️❤️❤️❤️<br><br><br>    WORK IN PROGRESS   </p>
+				<br><br> (j'espère que t'as pas envoyé de photos bizarres à Coco 😔)
+				<br><br> Je t'aime fooooooort ❤️❤️❤️❤️<br><br><br>    WORK IN PROGRESS   </p>
 		</div>
 
 		<div class="darker"></div>
