--- a/src/ilovu.html
+++ b/src/ilovu.html
@@ -29,11 +29,11 @@
 
 		<div class="about_me">
 			<h3>Manoon:</h3>
-			<p>Coucou !<br><br>Ça fait un peu mois d'un mois et demi qu'on est ensemble, mais je t'aime vraiment trèèèès fort.
+			<p>Coucou !<br><br>Ça fait un peu moins d'un mois et demi qu'on est ensemble, mais je t'aime vraiment trèèèèès fort.
 				<br>T'es vraiment beaucoup trop importante pour moi.
-				<br><br>Le premier janvier, après ton loooong message tout mignon, je t'ai dit "je t'aime" pour la première fois, et ça m'a profondément remplis de joie.
-				Voir ta tête sur mon fond d'écran tous les jours m'a toujours ravi et j'espère sincèrement qu'elles continueront d'être actualisées quotidiennement.
-				<br>Nos dernières querelles m'ont vraiment fait peur,<br>Je t'aime énormèment et penser à l'idée que tu puisses me laisser comme ça m'a vraiment effrayé,
+				<br><br>Le premier janvier, après ton loooong message tout mignon, je t'ai dit "je t'aime" pour la première fois, et ça m'a profondément rempli de joie.
+				Voir ta tête sur mon fond d'écran tous les jours m'a toujours ravi et j'espère sincèrement que ces photos continueront d'être actualisées quotidiennement.
+				<br>Nos dernières querelles m'ont vraiment fait peur,<br>Je t'aime énormément et penser à l'idée que tu puisses me laisser comme ça m'a vraiment effrayé,
 				j'ai besoin de toi manon, genre AAAAARGH, tu comprends ?? 😭😭, viens me faire des bisous, tout ce que tu veux mais euh voilà.
 				<br><br>J'espère que tu vas trouver quelque chose pour te faire excuser de ces frayeurs 👀
 				<br><br>Je t'aime vraiment très fort manon,
