[Add] - lil messages

--- a/src/ilovu.html
+++ b/src/ilovu.html
@@ -16,10 +16,10 @@
 			<a href="../index.html"><img src="../assets/icon.png" class="icon" alt="icon logo nerzouille webpage"></a>
 			<nav>
 				<ul id="menu">
-					<li><a href="">Je</a></li>
-					<li><a href="">T'aime</a></li>
-					<li><a href="">Ptit</a></li>
-					<li><a href="">Coeeeeeur</a></li>
+					<li><a href="../src/yo1.html">Je</a></li>
+					<li><a href="../src/yo2.html">T'aime</a></li>
+					<li><a href="../src/yo3.html">Ptit</a></li>
+					<li><a href="../src/yo4.html">Coeeeeeur</a></li>
 				</ul>
 			</nav>
 			<img src="../assets/menu.png" class="menu" id="icon-menu" onclick="toggle()">
